# qooti

./: .gitignore  ARCHITECTURE.md  BUILD_AND_RELEASE_GUIDE.md  DEPLOY.md  QA_CHECKLIST.md  README.md  Releases note  TAURI_MIGRATION.md  UPDATES.md  V1_SPEC.md  context.md  modalref.html  package-lock.json  package.json  qooti-modal-design-system.md  wrangler.jsonc
admin/: README.md  admin.css  admin.js  index.html  worker-admin.example.js  worker-license-public.example.js
electron/: main.js  preload.js  serve.js
extension/: README.md  background.js  content.js  icon-dataurl.txt  manifest.json  options.html  options.js  popup.html  popup.js
scripts/: copy-assets.js  dev-server.js  gen-icons.js  generate-latest-json.js  node-shim.js  ocr-entry.mjs  ort-shim.js  prepare-ffmpeg.js  prepare-github-release-folder.js  prepare-installer-sidebar.js  prepare-ocr-assets.js  prepare-ytdlp.js  verify-build-resources.mjs
src/: behavior-recommendations.js  i18n.js  index.html  notify.js  renderer.js  styles.css  tauri-api.js
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  windows-file-assoc-hooks.nsh
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  extension_server.rs  lib.rs  main.rs  pack.rs  palette.rs  tags.rs  vault.rs
website/: .env.example  .gitignore  SETUP.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
worker/: README.md  package-lock.json  package.json  (+1 more)
(+142 files in other folders)
